--- a/clientside/css.css
+++ b/clientside/css.css
@@ -8,6 +8,8 @@ body{
 	background-color: #e9e9e9;
 	margin-top:10px;
 	margin-bottom:10px;
+	min-width: 700px;
+	overflow-x:visible;
 }
 .contentBoxLeft{
 	float:left;
@@ -42,7 +44,7 @@ body{
 	width:-moz-calc(100%-210px);
 	width: -webkit-calc(100%-210px);
 	width: -o-calc(100%-210px);
-	min-width:400px;
+	min-width:700px;
 	background-color:#f3f3f3;
 	overflow-y:scroll;
 
@@ -50,7 +52,7 @@ body{
 #main{
 	min-height:450px;
 	width:100%;
-	min-width: 610px;
+	min-width: 900px;
 	overflow:hidden;
 }
 .min:hover{
@@ -66,6 +68,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 .others{
 	width:100%;
 	height:200px;
+}
+.paragraphSubmitted{
+	color:#3e3e3e;
+	letter-spacing: 1px;
+	font-size: 10;
+}
+.paragraphTitle{
+	color:#336699;
+	font-size: 20;
 }
 #right{
 	float:right;
