--- a/clientside/css.css
+++ b/clientside/css.css
@@ -1,6 +1,7 @@
 body{
-	background-color:#f6f9fc;
+	background-color:#f3f3f3;;
 	margin: auto;
+	font-family: 'Noto Sans', serif;
 }
 #top{
 	float:top;
@@ -27,29 +28,54 @@ body{
 	min-width:700px;
 	/*
 	background-color:#f3f3f3;*/
-	background-color:#f6f9fc;
+	background-color:#f3f3f3;;
 	overflow-y:scroll;
 
 }
 
 .contentBox{
-	width:100%;
-	height:300px;
+	width:95%;
+	height:100px;
 	/*background-color: #e9e9e9;*/
-	background-color:#f6f9fc;
-	margin:auto;
-	margin-top:30px;
-	margin-bottom:30px;
+	background-color:#f3f3f3;
+	margin: 0;
+	margin-left:auto;
+	margin-right: auto;
+	display: block;
 	min-width: 700px;
 	overflow-x:hidden;
 	overflow-y:hidden;
+
 }
 .contentBoxLeft{
 	float:left;
-	width:60%;
+	width:80%;
+}
+.titleBox{
+	min-width: 100%;
+	width:100%;
+	height:100px;
+	margin-top:30px;
+	margin-bottom:30px;
+	max-height:100px;
+	background-color: #ffffff;
+}
+.title{
+	float:right;
+	height:100px;
+	position:relative;
+	width: calc(100% - 50px);
+	width:-moz-calc(100%-50px);
+	width: -webkit-calc(100%-50px);
+	width: -o-calc(100%-50px);
+}
+
+.upDown{
+	float:left;
+	height:100px;
+	width:50px;
 }
 .upvote{
-
 	width: 0px;
 	height: 0px;
 	border-style: solid;
@@ -92,9 +118,8 @@ body{
 }
 .imgBox{
 	float:right;
-
-
-	background-color: red;
+	width: 160px;
+	height: 160px;
 }
 
 .min:hover{
@@ -112,13 +137,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 	height:200px;
 }
 .paragraphSubmitted{
-	color:#3e3e3e;
-	letter-spacing: 1px;
-	font-size: 10;
+	color:#555555;
+	font-size: 13;
+	margin: auto;
+	position: absolute;
+	bottom: 7;
+	padding-left: 20px;
 }
 .paragraphTitle{
 	color:#336699;
-	font-size: 20;
+	font-size: 27px;
+	margin: auto;
+	padding-top: 7px;
+	padding-left: 20px;
+	line-height: 120%;
 }
 #right{
 	float:right;
@@ -156,26 +188,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 	height:55%;
 	background-color: #f3f3f3;
 	overflow-y:scroll;
-}
-.titleBox{
-	min-width: 100%;
-	width:100%;
-	height:100px;
-	max-height:100px;
-	background-color: #ffffff;
-}
-.title{
-	float:right;
-	width: calc(100% - 50px);
-	width:-moz-calc(100%-50px);
-	width: -webkit-calc(100%-50px);
-	width: -o-calc(100%-50px);
-}
-
-.upDown{
-	float:left;
-	height:100px;
-	width:50px;
 }
 
 
