--- a/clientside/css.css
+++ b/clientside/css.css
@@ -35,7 +35,6 @@ body{
 
 .contentBox{
 	width:95%;
-	height:100px;
 	/*background-color: #e9e9e9;*/
 	background-color:#f3f3f3;
 	margin: 0;
@@ -49,14 +48,13 @@ body{
 }
 .contentBoxLeft{
 	float:left;
-	width:80%;
+	width:70%;
 }
 .titleBox{
 	min-width: 100%;
 	width:100%;
 	height:100px;
-	margin-top:30px;
-	margin-bottom:30px;
+	margin-top: 60px;
 	max-height:100px;
 	background-color: #ffffff;
 }
@@ -67,7 +65,7 @@ body{
 	width: calc(100% - 50px);
 	width:-moz-calc(100%-50px);
 	width: -webkit-calc(100%-50px);
-	width: -o-calc(100%-50px);
+	width: -o-calc(100%-50px);*/
 }
 
 .upDown{
@@ -118,8 +116,13 @@ body{
 }
 .imgBox{
 	float:right;
+
 	width: 160px;
 	height: 160px;
+}
+.imgBox img{
+	width: 160px;
+	height:160px;
 }
 
 .min:hover{
@@ -134,7 +137,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 }
 .others{
 	width:100%;
-	height:200px;
+	height:0px;
 }
 .paragraphSubmitted{
 	color:#555555;
