--- a/clientside/css.css
+++ b/clientside/css.css
@@ -1,15 +1,23 @@
 body{
 	background-color:#cee3f8;
 }
-.contentBox{
-	width:100%;
-	height:300px;
-	border-radius:10px;
-	background-color: #e9e9e9;
-	margin-top:10px;
-	margin-bottom:10px;
-	min-width: 700px;
-	overflow-x:visible;
+.comment{
+	width:200px;
+	height:60px;
+	background-color: #e4edf7;
+	margin:0 auto;
+	text-align:center;
+	border-radius: 8px;
+}
+.comment:hover{
+	background: #5584a8; /* Old browsers */
+	background: -moz-linear-gradient(-45deg, #5584a8 0%, #7db9e8 98%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#5584a8), color-stop(98%,#7db9e8)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(-45deg, #5584a8 0%,#7db9e8 98%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(-45deg, #5584a8 0%,#7db9e8 98%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(-45deg, #5584a8 0%,#7db9e8 98%); /* IE10+ */
+	background: linear-gradient(135deg, #5584a8 0%,#7db9e8 98%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 .contentBoxLeft{
 	float:left;
@@ -32,7 +40,31 @@ body{
 	float:right;
 	width:50%;
 	height:300px;
+	max-width:50%;
+	max-height:300px;
 	background-color: #333333;
+	border-radius:8px;
+	overflow:hidden;
+}
+.imgContentBox{
+	width:100%;
+	height:300px;
+	border-radius:10px;
+	margin-top:10px;
+	margin-bottom:10px;
+	min-width: 700px;
+}
+.imgOthers{
+	width:100%;
+	height:200px;
+}
+.selfContentBox{
+	width:100%;
+	height:160px;
+	border-radius:10px;
+	margin-top:10px;
+	margin-bottom:10px;
+	min-width: 700px;
 }
 #left{
 	float:left;
@@ -45,7 +77,6 @@ body{
 	width: -webkit-calc(100%-210px);
 	width: -o-calc(100%-210px);
 	min-width:700px;
-	background-color:#f3f3f3;
 	overflow-y:scroll;
 
 }
@@ -67,7 +98,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 }
 .others{
 	width:100%;
-	height:200px;
+	height:60px;
+}
+.paragraphComment{
+	margin:0 auto;
 }
 .paragraphSubmitted{
 	color:#3e3e3e;
@@ -83,6 +117,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 	text-align:center;
 	color:#336699;
 	width:200px;
+}
+.selfBox{
+	float:right;
+	width:50%;
+	height:160px;
+	max-width:50%;
+	max-height:160px;
+	background-color: #333333;
+	border-radius:8px;
+	overflow:hidden;
+	color:#336699;
+	text-align:center;
 }
 #s1{
 	margin:5px;
@@ -120,6 +166,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 	width:100%;
 	height:100px;
 	max-height:100px;
+	border-radius:8px;
 	background-color: #ffffff;
 }
 .title{
