Pic preview on right, better post formatting

--- a/clientside/css.css
+++ b/clientside/css.css
@@ -54,7 +54,8 @@ body{
 	min-width: 100%;
 	width:100%;
 	height:100px;
-	margin-top: 60px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 	max-height:100px;
 	background-color: #ffffff;
 }
@@ -113,6 +114,12 @@ body{
 }
 #focus{
 	padding: 10px;
+}
+.topComment{
+	width: 160px;
+	height: 160px;
+	background-color: red;
+	float: left;
 }
 .imgBox{
 	float:right;
