--- a/clientside/css.css
+++ b/clientside/css.css
@@ -1,5 +1,5 @@
 body{
-	background-color:#f3f3f3;;
+	background-color:#f3f3f3;
 	margin: auto;
 	font-family: 'Noto Sans', serif;
 }
@@ -64,7 +64,7 @@ body{
 	height:100px;
 	position:relative;
 	width: calc(100% - 50px);
-	width:-moz-calc(100%-50px);
+	width: -moz-calc(100%-50px);
 	width: -webkit-calc(100%-50px);
 	width: -o-calc(100%-50px);*/
 }
@@ -78,39 +78,31 @@ body{
 	width: 0px;
 	height: 0px;
 	border-style: solid;
-	border-width: 50px 0 0 50px;
-	border-color: transparent transparent transparent #ffc47e;
+	border-width: 0 25px 50px 25px;
+	border-color: #f3f3f3 transparent #ffb865 #f3f3f3;
 	
 	/*
 	width: 0px;
 	height: 0px;
 	border-style: solid;
 	border-width: 0 0 50px 50px;
-	border-color: #f7f7f8 #f7f7f8 #ffc47e #f7f7f8;
+	border-color: #f7f7f8 #f7f7f8 #ffb865 #f7f7f8;
 	*/
+
 }
 .upvote:hover{
-	background-color: #ff6600;
+	border-color: #f3f3f3 transparent rgb(255, 139, 36) #f3f3f3;
 }
 
 .downvote{
-	
 	width: 0px;
 	height: 0px;
 	border-style: solid;
-	border-width: 50px 50px 0 0;
-	border-color: #a5c1ff transparent transparent transparent;
-		
-/*
-	width: 0px;
-	height: 0px;
-	border-style: solid;
-	border-width: 0 50px 50px 0;
-	border-color: #f7f7f8 #007bff #f7f7f8 #f7f7f8;
-*/
+	border-width: 50px 25px 0 25px;
+	border-color: #a5c1ff transparent #f3f3f3 #f3f3f3;
 }
 .downvote:hover{
-	background-color: #9494ff;
+	border-color: #598cff transparent #f3f3f3 #f3f3f3;
 }
 #focus{
 	padding: 10px;
@@ -152,14 +144,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 	margin: auto;
 	position: absolute;
 	bottom: 7;
-	padding-left: 20px;
+	padding-left: 30px;
 }
 .paragraphTitle{
 	color:#336699;
 	font-size: 27px;
 	margin: auto;
 	padding-top: 7px;
-	padding-left: 20px;
+	padding-left: 30px;
 	line-height: 120%;
 }
 #right{
