--- a/clientside/css.css
+++ b/clientside/css.css
@@ -1,5 +1,6 @@
 body{
 	background-color:#f7f7f8;
+	font-family: 'Noto Sans',serif;
 }
 .comment{
 	width:200px;
@@ -45,6 +46,9 @@ body{
 	background-color: #333333;
 	border-radius:8px;
 	overflow:hidden;
+}
+.imgBox img{
+
 }
 .imgContentBox{
 	width:100%;
@@ -106,11 +110,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 .paragraphSubmitted{
 	color:#3e3e3e;
 	letter-spacing: 1px;
-	font-size: 10;
+	font-size: 13;
+	margin:0px;
+	padding-left: 20px;
+	position: absolute;
+	bottom: 10px;
 }
 .paragraphTitle{
 	color:#336699;
-	font-size: 20;
+	font-size: 25;
+	margin:0px;
+	padding-top: 10px;
+	padding-left: 20px;
 }
 #right{
 	float:right;
@@ -162,6 +173,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 	overflow-y:scroll;
 }
 .titleBox{
+	position: relative;
 	min-width: 100%;
 	width:100%;
 	height:100px;
