--- a/clientside/css.css
+++ b/clientside/css.css
@@ -1,7 +1,7 @@
 body{
 	background-color:#f3f3f3;
 	margin: auto;
-	font-family: 'Noto Sans', serif;
+	font-family: 'Lato','Roboto Slab','Noto Sans', serif;
 }
 #top{
 	float:top;
@@ -54,6 +54,7 @@ body{
 	min-width: 100%;
 	width:100%;
 	height:100px;
+	margin-left: 30px;
 	margin-top: 30px;
 	margin-bottom: 30px;
 	max-height:100px;
@@ -152,6 +153,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5584a8', end
 	font-size: 27px;
 	margin: auto;
 	padding-top: 7px;
+	padding-right: 7px;
 	padding-left: 30px;
 	line-height: 120%;
 }
