--- a/clientside/css.css
+++ b/clientside/css.css
@@ -1,6 +1,6 @@
 body{
 	background-color:#f7f7f8;
-	font-family: 'Noto Sans',serif;
+	font-family: 'Lato',serif;
 }
 .comment{
 	width:200px;
@@ -41,7 +41,7 @@ body{
 	float:right;
 	width:50%;
 	height:300px;
-	max-width:50%;
+-	max-width:50%;
 	max-height:300px;
 	background-color: #333333;
 	border-radius:8px;
