--- a/clientside/css.css
+++ b/clientside/css.css
@@ -1,5 +1,9 @@
+img{
+	max-height:100%;
+	max-width:100%;
+}
 body{
-	background-color:#f7f7f8;
+	background-color:#cee3f8;
 }
 .comment{
 	width:200px;
